@@ -21,6 +21,7 @@ requires: [git, railsapps,
   rails_signup_download,
   rails_mailinglist_activejob,
   rails_stripe_checkout,
+  rails_stripe_coupons,
   setup, locale, readme, gems,
   tests,
   email,
