@@ -61,6 +61,11 @@ stage_three do
     append_file '.env', foreman_omniauth if prefer :local_env_file, 'foreman'
     append_file 'config/application.yml', figaro_omniauth if prefer :local_env_file, 'figaro'
   end
+  ## rails-stripe-coupons
+  if prefer :apps4, 'rails-stripe-coupons'
+    gsub_file 'config/secrets.yml', /<%= ENV\["PRODUCT_TITLE"] %>/, 'What is Ruby on Rails'
+    gsub_file 'config/secrets.yml', /<%= ENV\["PRODUCT_PRICE"] %>/, '995'
+  end
   ### EXAMPLE FILE FOR FOREMAN AND FIGARO ###
   if prefer :local_env_file, 'figaro'
     copy_file destination_root + '/config/application.yml', destination_root + '/config/application.example.yml'
@@ -76,6 +81,14 @@ stage_three do
       copy_from_repo 'app/services/create_admin_service.rb', :repo => 'https://raw.github.com/RailsApps/rails-devise-pundit/master/'
     else
       copy_from_repo 'app/services/create_admin_service.rb', :repo => 'https://raw.github.com/RailsApps/rails-devise/master/'
+    end
+  end
+  if prefer :apps4, 'rails-stripe-coupons'
+    copy_from_repo 'app/services/create_couponcodes_service.rb', :repo => 'https://raw.github.com/RailsApps/rails-stripe-coupons/master/'
+    append_file 'db/seeds.rb' do <<-FILE
+CreateCouponcodesService.new.call
+puts 'CREATED PROMOTIONAL CODES'
+FILE
     end
   end
   if prefer :local_env_file, 'figaro'
@@ -135,6 +148,10 @@ FILE
   end
   # create navigation links using the rails_layout gem
   generate 'layout:navigation -f'
+  if prefer :apps4, 'rails-stripe-coupons'
+    inject_into_file 'app/views/layouts/_navigation_links.html.erb', ", data: { no_turbolink: true }", :after => "new_user_registration_path"
+    inject_into_file 'app/views/layouts/_navigation_links.html.erb', "\n    <li><%= link_to 'Coupons', coupons_path %></li>", :after => "users_path %></li>"
+  end
   ### GIT ###
   git :add => '-A' if prefer :git, true
   git :commit => '-qm "rails_apps_composer: navigation links"' if prefer :git, true
