@@ -35,7 +35,8 @@ when "4"
           ["rails-devise-roles", "rails-devise-roles"],
           ["rails-devise-pundit", "rails-devise-pundit"],
           ["rails-signup-download", "rails-signup-download"],
-          ["rails-stripe-checkout", "rails-stripe-checkout"]]
+          ["rails-stripe-checkout", "rails-stripe-checkout"],
+          ["rails-stripe-coupons", "rails-stripe-coupons"]]
         else
           prefs[:apps4] = multiple_choice "Upgrade to Rails 4.2 for more choices.",
           [["learn-rails", "learn-rails"],
