@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.0.32"
+  VERSION = "3.0.33"
 end
